The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:


Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

Here is a test entry

----------------------------------------------------------------------
Name Mike Rainey (http://cs.uchicago.edu/~mrainey)
Date 2009/08/19
Description:

Fixed a bug in the register-spill generator that is part of the MLRISC
register allocator. The problem was that the code in RASpillWithRenaming 
functor assumed incorrectly that dedicated registers would appear in 
def/use information generated by ClusterRA. Thanks to Allen Leung for
helping with this bug.

----------------------------------------------------------------------
Name John Reppy (http://cs.uchicago.edu/~jhr)
Date 2009/07/09
Description:

Removed redundant implementations of various top-level operations by
consolidating them in base/system/smlnj/init/pervasive.sml.  This
change also fixes a bug in that the top-level version of round was
incorrect.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2009/06/15 11:17:00 CDT
Description:

Bumped version number to 110.70.  New bootfiles.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2009/06/12 11:02:00 CDT
Description:

1. Corrected problem in config/actions that led to the so-called
   "unpickling bug" which appeared in version 110.68.

2. Provided fix for the 64-bit pattern match bug.

----------------------------------------------------------------------
Name John Reppy (http://cs.uchicago.edu/~jhr)
Date 2009/03/21
Description:

Fixed bug in Int32.fmt when the argument was the minimum int and the
radix was something other than DEC.

----------------------------------------------------------------------