@@ -11,9 +11,9 @@
 SHELL =		/bin/sh
 
 MAKE =		make
-AS =		/usr/bin/as
-CC =		cc -ansi
-CFLAGS =	-g -O2 -D_NONSTD_SOURCE
+AS =		/usr/bin/as -arch i386
+CC =		cc -m32 -ansi
+CFLAGS =	-g -O2 -D_DARWIN_C_SOURCE
 CPP =           cc -x assembler-with-cpp -E -P -ansi
 XOBJS =
 XLIBS =         ../c-libs/dl/libunix-dynload.a
