@@ -16,6 +16,14 @@ Description:
 Here is a test entry
 
 ----------------------------------------------------------------------
+Name John Reppy (http://cs.uchicago.edu/~jhr)
+Date 2009/09/13
+Description:
+
+Changes to support compiling the runtime system on Mac OS X 10.6
+(aka Snow Leopard).
+
+----------------------------------------------------------------------
 Name Mike Rainey (http://cs.uchicago.edu/~mrainey)
 Date 2009/08/19
 Description:
